{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 330,
  "lineage": "8b7bcd42-31a5-3a5f-8169-5e2da8cc6318",
  "resources": [
    {
      "module": "module.zero_trust_base",
      "mode": "managed",
      "type": "aws_instance",
      "name": "attacker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06dd5c911c0d8dcdc",
            "arn": "arn:aws:ec2:us-east-1:636477547504:instance/i-0fd95b5f40f4748ee",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd95b5f40f4748ee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "zero-trust-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03f1c3b838b00194e",
            "private_dns": "ip-10-0-0-82.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.82",
            "public_dns": "ec2-98-91-212-77.compute-1.amazonaws.com",
            "public_ip": "98.91.212.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0695a8b6167fada19",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0032feb30d35ea73d",
            "tags": {
              "Name": "attacker-test-instance",
              "Purpose": "Security Testing"
            },
            "tags_all": {
              "Name": "attacker-test-instance",
              "Purpose": "Security Testing"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a502f88485219829"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.zero_trust_base.aws_key_pair.zero_trust_key",
            "module.zero_trust_base.aws_security_group.zt_gateway_sg",
            "module.zero_trust_base.aws_subnet.public",
            "module.zero_trust_base.aws_vpc.zero_trust_vpc",
            "module.zero_trust_base.data.aws_ami.amazon_linux_2",
            "module.zero_trust_base.data.aws_availability_zones.available",
            "module.zero_trust_base.data.aws_secretsmanager_secret.ssh_key",
            "module.zero_trust_base.data.aws_secretsmanager_secret_version.ssh_key"
          ]
        }
      ]
    },
    {
      "module": "module.zero_trust_base",
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06dd5c911c0d8dcdc",
            "arn": "arn:aws:ec2:us-east-1:636477547504:instance/i-078ebdda785318e21",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-078ebdda785318e21",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "zero-trust-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ff7106269d4ae5d5",
            "private_dns": "ip-10-0-10-158.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c2a44ed9bdceeae5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a676ed86725eba2d",
            "tags": {
              "Name": "database-server",
              "Tier": "Database"
            },
            "tags_all": {
              "Name": "database-server",
              "Tier": "Database"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e82ee682278466e5"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.zero_trust_base.aws_key_pair.zero_trust_key",
            "module.zero_trust_base.aws_security_group.app_sg",
            "module.zero_trust_base.aws_security_group.db_sg",
            "module.zero_trust_base.aws_security_group.web_sg",
            "module.zero_trust_base.aws_security_group.zt_gateway_sg",
            "module.zero_trust_base.aws_subnet.private",
            "module.zero_trust_base.aws_vpc.zero_trust_vpc",
            "module.zero_trust_base.data.aws_ami.amazon_linux_2",
            "module.zero_trust_base.data.aws_availability_zones.available",
            "module.zero_trust_base.data.aws_secretsmanager_secret.ssh_key",
            "module.zero_trust_base.data.aws_secretsmanager_secret_version.ssh_key"
          ]
        }
      ]
    },
    {
      "module": "module.zero_trust_base",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "web-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06dd5c911c0d8dcdc",
            "arn": "arn:aws:ec2:us-east-1:636477547504:instance/i-0d9a4610d925f7bed",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d9a4610d925f7bed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "zero-trust-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eb54046837d9c949",
            "private_dns": "ip-10-0-0-141.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.141",
            "public_dns": "ec2-54-162-227-84.compute-1.amazonaws.com",
            "public_ip": "54.162.227.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0423968376f9dc372",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0032feb30d35ea73d",
            "tags": {
              "Name": "web-1",
              "Tier": "Web"
            },
            "tags_all": {
              "Name": "web-1",
              "Tier": "Web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-06e5befafe17a2e43"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.zero_trust_base.aws_key_pair.zero_trust_key",
            "module.zero_trust_base.aws_security_group.web_sg",
            "module.zero_trust_base.aws_security_group.zt_gateway_sg",
            "module.zero_trust_base.aws_subnet.public",
            "module.zero_trust_base.aws_vpc.zero_trust_vpc",
            "module.zero_trust_base.data.aws_ami.amazon_linux_2",
            "module.zero_trust_base.data.aws_availability_zones.available",
            "module.zero_trust_base.data.aws_secretsmanager_secret.ssh_key",
            "module.zero_trust_base.data.aws_secretsmanager_secret_version.ssh_key"
          ]
        },
        {
          "index_key": "web-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06dd5c911c0d8dcdc",
            "arn": "arn:aws:ec2:us-east-1:636477547504:instance/i-085d502a66a9514f6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-085d502a66a9514f6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "zero-trust-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ff632ee70556c599",
            "private_dns": "ip-10-0-1-93.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.93",
            "public_dns": "ec2-44-213-111-166.compute-1.amazonaws.com",
            "public_ip": "44.213.111.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03774b1e0d5654df1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd3bf58cd9c0894c",
            "tags": {
              "Name": "web-2",
              "Tier": "Web"
            },
            "tags_all": {
              "Name": "web-2",
              "Tier": "Web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-06e5befafe17a2e43"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.zero_trust_base.aws_key_pair.zero_trust_key",
            "module.zero_trust_base.aws_security_group.web_sg",
            "module.zero_trust_base.aws_security_group.zt_gateway_sg",
            "module.zero_trust_base.aws_subnet.public",
            "module.zero_trust_base.aws_vpc.zero_trust_vpc",
            "module.zero_trust_base.data.aws_ami.amazon_linux_2",
            "module.zero_trust_base.data.aws_availability_zones.available",
            "module.zero_trust_base.data.aws_secretsmanager_secret.ssh_key",
            "module.zero_trust_base.data.aws_secretsmanager_secret_version.ssh_key"
          ]
        }
      ]
    },
    {
      "module": "module.zero_trust_base",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636477547504:internet-gateway/igw-088c4504e10b9a27e",
            "id": "igw-088c4504e10b9a27e",
            "owner_id": "636477547504",
            "tags": {
              "Name": "zero-trust-igw"
            },
            "tags_all": {
              "Name": "zero-trust-igw"
            },
            "vpc_id": "vpc-00354982b59e5334f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.zero_trust_base.aws_vpc.zero_trust_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.zero_trust_base",
      "mode": "managed",
      "type": "aws_lb",
      "name": "zero_trust_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:636477547504:loadbalancer/app/zero-trust-alb/a1563c9112a2397c",
            "arn_suffix": "app/zero-trust-alb/a1563c9112a2397c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "zero-trust-alb-636132396.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:636477547504:loadbalancer/app/zero-trust-alb/a1563c9112a2397c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "zero-trust-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a502f88485219829"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0032feb30d35ea73d"
              },
              {
                "subnet_id": "subnet-0dd3bf58cd9c0894c"
              }
            ],
            "subnets": [
              "subnet-0032feb30d35ea73d",
              "subnet-0dd3bf58cd9c0894c"
            ],
            "tags": {
              "Name": "zero-trust-alb"
            },
            "tags_all": {
              "Name": "zero-trust-alb"
            },
            "vpc_id": "vpc-00354982b59e5334f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.zero_trust_base.aws_security_group.zt_gateway_sg",
            "module.zero_trust_base.aws_subnet.public",
            "module.zero_trust_base.aws_vpc.zero_trust_vpc",
            "module.zero_trust_base.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.zero_trust_base",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:636477547504:listener/app/zero-trust-alb/a1563c9112a2397c/5d9e53c5b0470301",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:636477547504:targetgroup/web-tier-tg/e3a1bd469c864052",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:636477547504:listener/app/zero-trust-alb/a1563c9112a2397c/5d9e53c5b0470301",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:636477547504:loadbalancer/app/zero-trust-alb/a1563c9112a2397c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "http-listener"
            },
            "tags_all": {
              "Name": "http-listener"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.zero_trust_base.aws_lb.zero_trust_alb",
            "module.zero_trust_base.aws_lb_target_group.web_tier",
            "module.zero_trust_base.aws_security_group.zt_gateway_sg",
            "module.zero_trust_base.aws_subnet.public",
            "module.zero_trust_base.aws_vpc.zero_trust_vpc",
            "module.zero_trust_base.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.zero_trust_base",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:636477547504:targetgroup/web-tier-tg/e3a1bd469c864052",
            "arn_suffix": "targetgroup/web-tier-tg/e3a1bd469c864052",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:636477547504:targetgroup/web-tier-tg/e3a1bd469c864052",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-tier-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "web-tier-target-group"
            },
            "tags_all": {
              "Name": "web-tier-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00354982b59e5334f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.zero_trust_base.aws_vpc.zero_trust_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.zero_trust_base",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "web-1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:636477547504:targetgroup/web-tier-tg/e3a1bd469c864052-20251110040158332700000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:636477547504:targetgroup/web-tier-tg/e3a1bd469c864052",
            "target_id": "i-0d9a4610d925f7bed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.zero_trust_base.aws_instance.web_servers",
            "module.zero_trust_base.aws_key_pair.zero_trust_key",
            "module.zero_trust_base.aws_lb_target_group.web_tier",
            "module.zero_trust_base.aws_security_group.web_sg",
            "module.zero_trust_base.aws_security_group.zt_gateway_sg",
            "module.zero_trust_base.aws_subnet.public",
            "module.zero_trust_base.aws_vpc.zero_trust_vpc",
            "module.zero_trust_base.data.aws_ami.amazon_linux_2",
            "module.zero_trust_base.data.aws_availability_zones.available",
            "module.zero_trust_base.data.aws_secretsmanager_secret.ssh_key",
            "module.zero_trust_base.data.aws_secretsmanager_secret_version.ssh_key"
          ]
        },
        {
          "index_key": "web-2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:636477547504:targetgroup/web-tier-tg/e3a1bd469c864052-20251110040158516100000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:636477547504:targetgroup/web-tier-tg/e3a1bd469c864052",
            "target_id": "i-085d502a66a9514f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.zero_trust_base.aws_instance.web_servers",
            "module.zero_trust_base.aws_key_pair.zero_trust_key",
            "module.zero_trust_base.aws_lb_target_group.web_tier",
            "module.zero_trust_base.aws_security_group.web_sg",
            "module.zero_trust_base.aws_security_group.zt_gateway_sg",
            "module.zero_trust_base.aws_subnet.public",
            "module.zero_trust_base.aws_vpc.zero_trust_vpc",
            "module.zero_trust_base.data.aws_ami.amazon_linux_2",
            "module.zero_trust_base.data.aws_availability_zones.available",
            "module.zero_trust_base.data.aws_secretsmanager_secret.ssh_key",
            "module.zero_trust_base.data.aws_secretsmanager_secret_version.ssh_key"
          ]
        }
      ]
    },
    {
      "module": "module.zero_trust_base",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636477547504:route-table/rtb-07fc6ea3bf8b614ed",
            "id": "rtb-07fc6ea3bf8b614ed",
            "owner_id": "636477547504",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00354982b59e5334f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.zero_trust_base.aws_vpc.zero_trust_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.zero_trust_base",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636477547504:route-table/rtb-084ba76cec56eb3f1",
            "id": "rtb-084ba76cec56eb3f1",
            "owner_id": "636477547504",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-088c4504e10b9a27e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00354982b59e5334f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.zero_trust_base.aws_internet_gateway.igw",
            "module.zero_trust_base.aws_vpc.zero_trust_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.zero_trust_base",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0b559fa78cbe32e",
            "route_table_id": "rtb-07fc6ea3bf8b614ed",
            "subnet_id": "subnet-0a676ed86725eba2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.zero_trust_base.aws_route_table.private",
            "module.zero_trust_base.aws_subnet.private",
            "module.zero_trust_base.aws_vpc.zero_trust_vpc",
            "module.zero_trust_base.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038ae2ca9957dd449",
            "route_table_id": "rtb-07fc6ea3bf8b614ed",
            "subnet_id": "subnet-0fbf53ef973e7c2e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.zero_trust_base.aws_route_table.private",
            "module.zero_trust_base.aws_subnet.private",
            "module.zero_trust_base.aws_vpc.zero_trust_vpc",
            "module.zero_trust_base.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.zero_trust_base",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0200f2824cc146c03",
            "route_table_id": "rtb-084ba76cec56eb3f1",
            "subnet_id": "subnet-0032feb30d35ea73d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.zero_trust_base.aws_internet_gateway.igw",
            "module.zero_trust_base.aws_route_table.public",
            "module.zero_trust_base.aws_subnet.public",
            "module.zero_trust_base.aws_vpc.zero_trust_vpc",
            "module.zero_trust_base.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016f5a8b047db5ba9",
            "route_table_id": "rtb-084ba76cec56eb3f1",
            "subnet_id": "subnet-0dd3bf58cd9c0894c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.zero_trust_base.aws_internet_gateway.igw",
            "module.zero_trust_base.aws_route_table.public",
            "module.zero_trust_base.aws_subnet.public",
            "module.zero_trust_base.aws_vpc.zero_trust_vpc",
            "module.zero_trust_base.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.zero_trust_base",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636477547504:security-group/sg-0c8f72056ee7e9b32",
            "description": "Security group for app tier - only allows traffic from web tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8f72056ee7e9b32",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere (for management)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "App port only from web tier",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e5befafe17a2e43"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "app-tier-sg",
            "name_prefix": "",
            "owner_id": "636477547504",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-tier-sg"
            },
            "tags_all": {
              "Name": "app-tier-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00354982b59e5334f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.zero_trust_base.aws_security_group.web_sg",
            "module.zero_trust_base.aws_security_group.zt_gateway_sg",
            "module.zero_trust_base.aws_vpc.zero_trust_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.zero_trust_base",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636477547504:security-group/sg-0e82ee682278466e5",
            "description": "Security group for database tier - only allows traffic from app tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e82ee682278466e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere (for management)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "MySQL only from app tier",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c8f72056ee7e9b32"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-tier-sg",
            "name_prefix": "",
            "owner_id": "636477547504",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-tier-sg"
            },
            "tags_all": {
              "Name": "db-tier-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00354982b59e5334f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.zero_trust_base.aws_security_group.app_sg",
            "module.zero_trust_base.aws_security_group.web_sg",
            "module.zero_trust_base.aws_security_group.zt_gateway_sg",
            "module.zero_trust_base.aws_vpc.zero_trust_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.zero_trust_base",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636477547504:security-group/sg-06e5befafe17a2e43",
            "description": "Security group for web tier - only allows traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e5befafe17a2e43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere (for management)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP only from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a502f88485219829"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-tier-sg",
            "name_prefix": "",
            "owner_id": "636477547504",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-tier-sg"
            },
            "tags_all": {
              "Name": "web-tier-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00354982b59e5334f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.zero_trust_base.aws_security_group.zt_gateway_sg",
            "module.zero_trust_base.aws_vpc.zero_trust_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.zero_trust_base",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "zt_gateway_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636477547504:security-group/sg-0a502f88485219829",
            "description": "Security group for Zero Trust Gateway/ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a502f88485219829",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "zt-gateway-sg",
            "name_prefix": "",
            "owner_id": "636477547504",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zt-gateway-sg"
            },
            "tags_all": {
              "Name": "zt-gateway-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00354982b59e5334f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.zero_trust_base.aws_vpc.zero_trust_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.zero_trust_base",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636477547504:subnet/subnet-0a676ed86725eba2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a676ed86725eba2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "636477547504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "private-subnet-1",
              "Type": "Private"
            },
            "vpc_id": "vpc-00354982b59e5334f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.zero_trust_base.aws_vpc.zero_trust_vpc",
            "module.zero_trust_base.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636477547504:subnet/subnet-0fbf53ef973e7c2e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbf53ef973e7c2e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "636477547504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "private-subnet-2",
              "Type": "Private"
            },
            "vpc_id": "vpc-00354982b59e5334f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.zero_trust_base.aws_vpc.zero_trust_vpc",
            "module.zero_trust_base.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.zero_trust_base",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636477547504:subnet/subnet-0032feb30d35ea73d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0032feb30d35ea73d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636477547504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "public-subnet-1",
              "Type": "Public"
            },
            "vpc_id": "vpc-00354982b59e5334f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.zero_trust_base.aws_vpc.zero_trust_vpc",
            "module.zero_trust_base.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636477547504:subnet/subnet-0dd3bf58cd9c0894c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd3bf58cd9c0894c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636477547504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "public-subnet-2",
              "Type": "Public"
            },
            "vpc_id": "vpc-00354982b59e5334f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.zero_trust_base.aws_vpc.zero_trust_vpc",
            "module.zero_trust_base.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.zero_trust_base",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "zero_trust_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636477547504:vpc/vpc-00354982b59e5334f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dc0a3251193d1fa2",
            "default_route_table_id": "rtb-00e56186d65be2f25",
            "default_security_group_id": "sg-07bea2c2d041d33c8",
            "dhcp_options_id": "dopt-029f3ff218e66ac6c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00354982b59e5334f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00e56186d65be2f25",
            "owner_id": "636477547504",
            "tags": {
              "Name": "zero-trust-poc-vpc"
            },
            "tags_all": {
              "Name": "zero-trust-poc-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}